bppackaging/src/objects/Unit_Model__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Unit Models</relationshipLabel>
        <relationshipName>Unit_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MigrationId__c</fullName>
        <label>MigrationId</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Description__c</fullName>
        <label>Model Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Model</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Model__c</fullName>
        <label>Sub-Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Make__c</fullName>
        <label>Unit Make</label>
        <referenceTo>Unit_Make__c</referenceTo>
        <relationshipLabel>Unit Models</relationshipLabel>
        <relationshipName>Unit_Models</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VIN_Code__c</fullName>
        <label>VIN Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Unit Model</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UM-{0000000}</displayFormat>
        <label>Unit Model Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Models</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>